# rhythbox_cleaner

./: .gitignore  CMakeLists.txt  README.md
cli/: CMakeLists.txt
cli/includes/: CMakeLists.txt  appcli.h  displaythread.h  menucli.h
cli/sources/: CMakeLists.txt  appcli.cpp  menucli.cpp
cmake/: FindMXML.cmake
includes/: classwithcallback.h  entry.h  progressbar.h  property.h  rhythmdb.h  rhythmdbxml.h  song.h
sources/: CMakeLists.txt  entry.cpp  main.cpp  rhythmdb.cpp  rhythmdbxml.cpp  song.cpp
